[package]
name = "fighter-addition"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = "0.2.0"
hash40 = "1.3.0"
# skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
smash = { path = "c:/users/itsmeft24/Skyline-SmashBrosRust/smash-rs" }
once_cell = "1.12.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
